--- a/sinalgo/build.gradle
+++ b/sinalgo/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     compile group: 'io.github.classgraph', name: 'classgraph', version: '4.8.39'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
     implementation group: 'org.json', name: 'json', version: '20160810'
+    implementation 'com.google.code.gson:gson:2.8.7'
     //testCompile group: 'junit', name: 'junit', version: '4.12' // TODO enable tests
 }
 
