--- a/sinalgo/build.gradle
+++ b/sinalgo/build.gradle
@@ -81,8 +81,8 @@ dependencies {
     compile group: 'org.jdom', name: 'jdom2', version: '2.0.6'
     compile group: 'com.apple', name: 'AppleJavaExtensions', version: '1.4'
     compile group: 'io.github.classgraph', name: 'classgraph', version: '4.8.39'
+    compile 'org.apache.commons:commons-csv:1.8'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
-    implementation group: 'org.json', name: 'json', version: '20160810'
     implementation 'com.google.code.gson:gson:2.8.7'
     //testCompile group: 'junit', name: 'junit', version: '4.12' // TODO enable tests
 }
